prevent the CKEditor dropdown from being cut off

--- a/web/themes/utmusic/components/adminspring.scss
+++ b/web/themes/utmusic/components/adminspring.scss
@@ -183,3 +183,9 @@
     }
   }
 }
+
+// prevent the CKEditor dropdown from being cut off.
+.ck-dropdown__panel {
+  max-height: max(275px);
+  overflow: scroll;
+}
